--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,9 @@
 <h1>Home Title</h1> 
+  <ul>
+    <li><%= link_to "Catégories d'articles", article_categories_path %></li>
+    <li><%= link_to "Articles", articles_path %></li>
+    <li><%= link_to "Catégories de Médias", media_categories_path %></li>
+    <li><%= link_to "Médias", medias_path %></li>
+    <li><%= link_to "Etages", floors_path %></li>
+    <li><%= link_to "Logement", houses_path %></li>
+  </ul>
