Signed-off-by: Guilb <francois.guilbert@neoweb.fr>

--- a/app/views/home/index.iphone.erb
+++ b/app/views/home/index.iphone.erb
@@ -1,4 +1,10 @@
 <!-- Page d'accueil -->
+        <div id="contact" class="selectable">
+                <p><img src="jqtouch.png" /></p>
+
+                <p>FORMULAIRE          </p>
+                <p><br /><br /><a href="#" class="grayButton goback">Close</a></p>
+        </div>
 
 <div id="home" class="current">
   <div class="toolbar">
