Signed-off-by: Guilb <francois.guilbert@neoweb.fr>

--- a/app/views/home/index.iphone.erb
+++ b/app/views/home/index.iphone.erb
@@ -16,9 +16,10 @@
     <li class="arrow"><%= link_to "Catégories d'articles", article_categories_path %></li>
     <li class="arrow"><%= link_to "Articles", articles_path %></li>
     <li class="arrow"><%= link_to "Catégories de Médias", media_categories_path %></li>
-    <li class="arrow"><%= link_to "Médias", "#medias" %></li>
+    <li class="arrow"><%= link_to "Médias", "#medias" %><small class="counter">5</small></li>
     <li class="arrow"><%= link_to "Etages", "#floors" %></li>
-    <li class="arrow"><%= link_to "Logemenst", "#houses" %></li>
+    <li class="arrow"><%= link_to "Logements", "#houses" %></li>
+    <li class="arrow"><%= link_to "Test vidéo", "#video" %></li>
     <li class="arrow"><a href="#photo2">Photo Gallery 2</a> <small class="counter">5</small></li>
 
   </ul>
