--- a/app/views/layouts/application.iphone.erb
+++ b/app/views/layouts/application.iphone.erb
@@ -6,18 +6,23 @@
 <meta content="yes" name="apple-mobile-web-app-capable" />
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 <meta content="minimum-scale=1.0, width=device-width, maximum-scale=0.6667, user-scalable=no" name="viewport" />
-<%= stylesheet_link_tag "iphone/jqtouch" %>
-<%= stylesheet_link_tag "iphone/theme" %>
+<%= stylesheet_link_tag "iphone/jqtouchbis" %>
+<%= stylesheet_link_tag "iphone/themebis" %>
+<%= stylesheet_link_tag "iphone/jqt.photo" %>
 
-<%= javascript_include_tag "iphone/jquery" %>
-<%= javascript_include_tag "iphone/jqtouch" %>
+<%= javascript_include_tag "iphone/jquerybis" %>
+<%= javascript_include_tag "iphone/jqtouchbis" %>
 <%= javascript_include_tag "iphone/jqtouch.transitions" %>
+<%= javascript_include_tag "iphone/jqt.photo" %>
+<%= javascript_include_tag "iphone/jqt.scroll" %>
   <title><%= @meta_title %></title>
   <meta name="keywords" content="<%= @meta_keywords %>" />
   <meta name="description" content="<%= @meta_description %>" />
-           <script type="text/javascript" charset="utf-8">
-            var jQT = new $.jQTouch({
-                icon: 'jqtouch.png',
+ <script type="text/javascript" charset="utf-8">
+            //change dynamic css
+		var jQT = new $.jQTouch({
+                slideSelector: '#jqt li a, .slide',
+				icon: 'jqtouch.png',
                 addGlossToIcon: false,
                 startupScreen: 'jqt_startup.png',
                 statusBar: 'black',
@@ -32,15 +37,20 @@
             });
             // Some sample Javascript functions:
             $(function(){
-                // Show a swipe event on swipe test
+
+				// Show a swipe event on swipe test
                 $('#swipeme').swipe(function(evt, data) {
-                    $(this).html('You swiped <strong>' + data.direction + '</strong>!');
+                    $(this).html('You swiped <strong>' + data.direction + '/' + data.deltaX +':' + data.deltaY + '</strong>!');
+                    $(this).parent().after('<li>swiped!</li>')
+
                 });
+                $('#tapme').tap(function(){
+                    $(this).parent().after('<li>tapped!</li>')
+                })
                 $('a[target="_blank"]').click(function() {
                     if (confirm('This link opens in a new window.')) {
                         return true;
                     } else {
-                        $(this).removeClass('active');
                         return false;
                     }
                 });
@@ -54,44 +64,143 @@
                     });
                 // Page animations end with AJAX callback event, example 1 (load remote HTML only first time)
                 $('#callback').bind('pageAnimationEnd', function(e, info){
-                    if (!$(this).data('loaded')) {                      // Make sure the data hasn't already been loaded (we'll set 'loaded' to true a couple lines further down)
-                        $(this).append($('<div>Loading</div>').         // Append a placeholder in case the remote HTML takes its sweet time making it back
-                            load('ajax.html .info', function() {        // Overwrite the "Loading" placeholder text with the remote HTML
-                                $(this).parent().data('loaded', true);  // Set the 'loaded' var to true so we know not to re-load the HTML next time the #callback div animation ends
-                            }));
+                    // Make sure the data hasn't already been loaded (we'll set 'loaded' to true a couple lines further down)
+                    if (!$(this).data('loaded')) {
+                        // Append a placeholder in case the remote HTML takes its sweet time making it back
+                        // Then, overwrite the "Loading" placeholder text with the remote HTML
+                        $(this).append($('<div>Loading</div>').load('ajax.html .info', function() {
+                            // Set the 'loaded' var to true so we know not to reload
+                            // the HTML next time the #callback div animation ends
+                            $(this).parent().data('loaded', true);
+                        }));
                     }
                 });
                 // Orientation callback event
-                $('body').bind('turn', function(e, data){
+                $('#jqt').bind('turn', function(e, data){
                     $('#orient').html('Orientation: ' + data.orientation);
                 });
+                $('#play_movie').bind('tap', function(){
+                    $('#movie').get(0).play();
+                    $(this).removeClass('active');
+                });
+
+                $('#video').bind('pageAnimationStart', function(e, info){
+                    $('#movie').css('display', 'none');
+                }).bind('pageAnimationEnd', function(e, info){
+                    if (info.direction == 'in')
+                    {
+                        $('#movie').css('display', 'block');
+                    }
+                });
+
+				jQT.generateGallery("photo", [
+											  {
+												  src:"http://www.nasa.gov/images/content/450090main_image_1653_946-710.jpg",
+												  width: 946,
+												  height: 710
+											  },
+											  {src:"/jqtouch/test-image-1.jpg",caption:"A test caption for the generator"},
+											  {src:"http://www.thinkgeek.com/images/products/front/b597_rock_paper_scissors_lizard_spock.jpg"},
+											  {src:"http://rlv.zcache.com/theres_no_place_like_127_0_0_1_tshirt-p235602976566783086tmn7_313.jpg"},
+											  {src:"http://www.thinkgeek.com/images/products/front/lg-capsaicin.jpg"},
+											  {src:"http://imgs.xkcd.com/comics/in_ur_reality.png"},
+											  {src:"http://www.thinkgeek.com/images/products/front/power.jpg"},
+											  {src:"http://imgs.xkcd.com/store/imgs/stand_back_square_0.png"},
+											  {src:"/jqtouch/test-image-4.jpg"},
+											  {src:"http://www.thinkgeek.com/images/products/front/zombie_repellent_crayon.jpg"},
+											  {src:"http://imgs.xkcd.com/store/imgs/sudo_square_0.png"},
+											  {src:"http://ladyzee.files.wordpress.com/2007/06/geek.jpg"},
+											  {src:"http://imgs.xkcd.com/store/imgs/just_shy_square_0.png"},
+											  {src:"/jqtouch/test-image-3.jpg"},
+											  {src:"http://farm5.static.flickr.com/4048/4620214378_da454753f2.jpg"},
+											  {src:"http://www.thinkgeek.com/images/products/front/ac0b_Electronic_Drum_Kit_Shirt.gif"},
+											  {src:"http://imgs.xkcd.com/comics/chess_photo.png"},
+											  {src:"http://farm5.static.flickr.com/4068/4635718507_389ca9b2e7.jpg"},
+											  {src:"http://imgs.xkcd.com/comics/asshole.png"},
+											  {src:"/jqtouch/test-image-2.jpg"},
+											  {src:"http://www.thinkgeek.com/images/products/front/obey-gravity.jpg"},
+											  {src:"http://farm3.static.flickr.com/2556/3833582019_a0c7593e5c.jpg"},
+											  {src:"http://antwrp.gsfc.nasa.gov/apod/image/1005/rheaepimetheus_cassini.jpg"},
+											  {src:"http://www.yeshua-do.com/jom/images/stories/einstein_tongue.jpg"},
+											  {src:"http://fc07.deviantart.net/fs71/f/2010/155/a/6/a63f0de1d27516832f2ce1474efc6be4.png"},
+											  {src:"http://fc07.deviantart.net/fs71/i/2010/154/8/5/sun_shower_by_jyoujo.jpg"},
+											  {src:"http://grin.hq.nasa.gov/IMAGES/MEDIUM/GPN-2000-000762.jpg"},
+											  {src:"http://i572.photobucket.com/albums/ss167/derekabril/einstein_010.png"},
+											  {src:"http://grin.hq.nasa.gov/IMAGES/MEDIUM/GPN-2000-000058.jpg"},
+											  {src:"http://fc05.deviantart.net/fs71/i/2010/153/5/f/tR_Minimal_Concept_by_kAtz93.png"},
+											  {src:"http://grin.hq.nasa.gov/IMAGES/MEDIUM/GPN-2000-000439.jpg"},
+											  {src:"http://antwrp.gsfc.nasa.gov/apod/image/1005/ic443_franke900.jpg"},
+											  {src:"/jqtouch/test-image-1.jpg",caption:"A test caption for the generator"},
+											  {src:"http://www.thinkgeek.com/images/products/front/b597_rock_paper_scissors_lizard_spock.jpg?2"},
+											  {src:"http://rlv.zcache.com/theres_no_place_like_127_0_0_1_tshirt-p235602976566783086tmn7_313.jpg?2"},
+											  {src:"http://www.thinkgeek.com/images/products/front/lg-capsaicin.jpg?2"},
+											  {src:"http://imgs.xkcd.com/comics/in_ur_reality.png?2"},
+											  {src:"http://www.thinkgeek.com/images/products/front/power.jpg?2"},
+											  {src:"http://imgs.xkcd.com/store/imgs/stand_back_square_0.png?2"},
+											  {src:"/jqtouch/test-image-4.jpg?2"},
+											  {src:"http://www.thinkgeek.com/images/products/front/zombie_repellent_crayon.jpg?2"},
+											  {src:"http://imgs.xkcd.com/store/imgs/sudo_square_0.png?2"},
+											  {src:"http://ladyzee.files.wordpress.com/2007/06/geek.jpg?2"},
+											  {src:"http://imgs.xkcd.com/store/imgs/just_shy_square_0.png?2"},
+											  {src:"/jqtouch/test-image-3.jpg?2"},
+											  {src:"http://farm5.static.flickr.com/4048/4620214378_da454753f2.jpg?2"},
+											  {src:"http://www.thinkgeek.com/images/products/front/ac0b_Electronic_Drum_Kit_Shirt.gif?2"},
+											  {src:"http://imgs.xkcd.com/comics/chess_photo.png?2"},
+											  {src:"http://farm5.static.flickr.com/4068/4635718507_389ca9b2e7.jpg?2"},
+											  {src:"http://imgs.xkcd.com/comics/asshole.png?2"},
+											  {src:"/jqtouch/test-image-2.jpg?2"},
+											  {src:"http://www.thinkgeek.com/images/products/front/obey-gravity.jpg?2"},
+											  {src:"http://farm3.static.flickr.com/2556/3833582019_a0c7593e5c.jpg?2"},
+											  {src:"http://antwrp.gsfc.nasa.gov/apod/image/1005/rheaepimetheus_cassini.jpg?2"},
+											  {src:"http://www.yeshua-do.com/jom/images/stories/einstein_tongue.jpg?2"},
+											  {src:"http://fc07.deviantart.net/fs71/f/2010/155/a/6/a63f0de1d27516832f2ce1474efc6be4.png?2"},
+											  {src:"http://fc07.deviantart.net/fs71/i/2010/154/8/5/sun_shower_by_jyoujo.jpg?2"},
+											  {src:"http://grin.hq.nasa.gov/IMAGES/MEDIUM/GPN-2000-000762.jpg?2"},
+											  {src:"http://i572.photobucket.com/albums/ss167/derekabril/einstein_010.png?2"},
+											  {src:"http://grin.hq.nasa.gov/IMAGES/MEDIUM/GPN-2000-000058.jpg?2"},
+											  {src:"http://fc05.deviantart.net/fs71/i/2010/153/5/f/tR_Minimal_Concept_by_kAtz93.png?2"},
+											  {src:"http://grin.hq.nasa.gov/IMAGES/MEDIUM/GPN-2000-000439.jpg?2"},
+											  {src:"http://antwrp.gsfc.nasa.gov/apod/image/1005/ic443_franke900.jpg?2"},
+											 ],
+									{defaultIndex:5});
+				jQT.generateGallery("photo2",[
+											  {src:"http://www.nasa.gov/images/content/450090main_image_1653_946-710.jpg"},
+											  {src:"/jqtouch/test-image-1.jpg",caption:"Test Image 1"},
+											  {src:"/jqtouch/test-image-2.jpg",caption:"Test Image 2"},
+											  {src:"http://rlv.zcache.com/css_is_awesome_mug-p1687164350719819282objs_210.jpg",caption:"CSS is Awesome"},
+											  {src:"/jqtouch/test-image-4.jpg"}
+											 ]);
             });
         </script>
         <style type="text/css" media="screen">
-            body.fullscreen #home .info {
+            body{padding-bottom:44px;}
+			#jqt.fullscreen #home .info {
                 display: none;
             }
-            #about {
+            div#jqt #about {
                 padding: 100px 10px 40px;
                 text-shadow: rgba(255, 255, 255, 0.3) 0px -1px 0;
                 font-size: 13px;
                 text-align: center;
                 background: #161618;
             }
-            #about p {
+            div#jqt #about p {
                 margin-bottom: 8px;
             }
-            #about a {
+            div#jqt #about a {
                 color: #fff;
                 font-weight: bold;
                 text-decoration: none;
             }
-        </style> 
-
+			.slide-container,.scroll-container{text-align:center;/*outline:2px solid red;*/}
+			.slide-container > img,.scroll-container > img{vertical-align:middle;}
+        </style>
 
 </head>
     <body>
+      <div id="jqt">
         <%= yield %>
+      </div>
     </body>
 
 
